--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "expo": "~51.0.8",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "~18.2.45",
+    "prettier": "^3.2.5",
     "typescript": "^5.1.3"
   },
   "private": true
