--- a/app.json
+++ b/app.json
@@ -5,11 +5,12 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "dark",
+    "backgroundColor": "#16171D",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#16171D"
     },
     "ios": {
       "supportsTablet": true
@@ -24,7 +25,16 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "assets/fonts/FiraSans-Regular.ttf",
+            "assets/fonts/FiraSans-SemiBold.ttf"
+          ]
+        }
+      ]
     ],
     "scheme": "purpleschool"
   }
