--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/drawer": "^6.6.15",
     "axios": "^1.7.2",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
@@ -20,6 +21,8 @@
     "jotai": "^2.8.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0"
