--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
+    "form-data": "^4.0.0",
     "jotai": "^2.8.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
