--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "expo-image-picker": "^15.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
+    "expo-screen-orientation": "^7.0.5",
+    "expo-sharing": "^12.0.1",
     "expo-status-bar": "~1.12.1",
     "form-data": "^4.0.0",
     "jotai": "^2.8.2",
