--- a/app.json
+++ b/app.json
@@ -33,6 +33,13 @@
             "./assets/fonts/FiraSans-SemiBold.ttf"
           ]
         }
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./local/assets/notification-icon.png",
+          "color": "#16171D"
+        }
       ]
     ],
     "scheme": "purpleschool"
