--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-navigation/drawer": "^6.6.15",
     "axios": "^1.7.2",
     "expo": "~51.0.8",
-    "expo-constants": "~16.0.1",
+    "expo-constants": "^16.0.2",
+    "expo-device": "^6.0.2",
     "expo-font": "~12.0.5",
     "expo-image-picker": "^15.0.5",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "^0.28.9",
     "expo-router": "~3.5.14",
     "expo-screen-orientation": "^7.0.5",
     "expo-sharing": "^12.0.1",
