--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/drawer": "^6.6.15",
     "axios": "^1.7.2",
-    "expo": "~51.0.8",
+    "expo": "~51.0.17",
     "expo-constants": "^16.0.2",
     "expo-device": "^6.0.2",
     "expo-font": "~12.0.5",
-    "expo-image-picker": "^15.0.5",
+    "expo-image-picker": "~15.0.6",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-notifications": "^0.28.9",
-    "expo-router": "~3.5.14",
+    "expo-router": "~3.5.17",
     "expo-screen-orientation": "^7.0.5",
     "expo-sharing": "^12.0.1",
     "expo-status-bar": "~1.12.1",
     "form-data": "^4.0.0",
     "jotai": "^2.8.2",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
