--- a/package.json
+++ b/package.json
@@ -4,50 +4,50 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-navigation/drawer": "^6.6.15",
-    "axios": "^1.7.2",
-    "expo": "~51.0.17",
-    "expo-constants": "^16.0.2",
-    "expo-device": "^6.0.2",
-    "expo-font": "~12.0.5",
-    "expo-image-picker": "~15.0.6",
-    "expo-linear-gradient": "^13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-notifications": "^0.28.9",
-    "expo-router": "~3.5.17",
-    "expo-screen-orientation": "^7.0.5",
-    "expo-sharing": "^12.0.1",
-    "expo-status-bar": "~1.12.1",
-    "form-data": "^4.0.0",
-    "jotai": "^2.8.2",
-    "react": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0"
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/drawer": "^7.0.3",
+    "axios": "^1.7.7",
+    "expo": "^52.0.7",
+    "expo-constants": "^17.0.3",
+    "expo-device": "^7.0.1",
+    "expo-font": "^13.0.1",
+    "expo-image-picker": "^16.0.2",
+    "expo-linear-gradient": "^14.0.1",
+    "expo-linking": "^7.0.2",
+    "expo-notifications": "^0.29.8",
+    "expo-router": "^4.0.5",
+    "expo-screen-orientation": "^8.0.0",
+    "expo-sharing": "^13.0.0",
+    "expo-status-bar": "^2.0.0",
+    "form-data": "^4.0.1",
+    "jotai": "^2.10.2",
+    "react": "^18.3.1",
+    "react-native": "^0.76.2",
+    "react-native-gesture-handler": "^2.21.0",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.1.0",
+    "react-native-svg": "^15.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/react": "~18.2.45",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
-    "eslint": "^9.3.0",
+    "@types/react": "^18.3.12",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-native": "^4.1.0",
-    "prettier": "^3.2.5",
-    "typescript": "~5.3.3"
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3"
   },
   "private": true
 }
