--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/drawer": "^7.1.1",
     "axios": "^1.7.9",
@@ -27,18 +34,18 @@
     "expo-status-bar": "^2.0.1",
     "form-data": "^4.0.1",
     "jotai": "^2.11.1",
-    "react": "^19.0.0",
-    "react-native": "^0.77.0",
-    "react-native-gesture-handler": "^2.22.1",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.5.0",
-    "react-native-svg": "^15.11.1"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
     "@trivago/prettier-plugin-sort-imports": "^5.2.1",
-    "@types/react": "^19.0.8",
+    "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
     "eslint": "^9.19.0",
